Mudanca de css e html

--- a/index.html
+++ b/index.html
@@ -8,55 +8,70 @@
 <body>
   <header>
     <h1>Marcos Melo</h1>
-    <p>QA Engineer | Manual & API Testing | Performance | VTEX | E-commerce</p>
+    <p>Analista de Qualidade | Testes Manuais e de Performance | APIs | VTEX | E-commerce</p>
     <nav>
       <a href="#sobre">Sobre</a>
+      <a href="#habilidades">Habilidades</a>
       <a href="#experiencia">Experiência</a>
-      <a href="#projetos">Projetos</a>
+      <a href="#certificacoes">Certificações</a>
       <a href="#contato">Contato</a>
     </nav>
   </header>
 
   <section id="sobre">
-    <h2>👋 Sobre Mim</h2>
+    <h2>👨‍💻 Sobre Mim</h2>
     <p>
-      Tenho experiência em testes manuais, APIs REST e SOAP, back-end, mobile e testes de performance com JMeter. Trabalho com ferramentas como Postman, Insomnia, SoapUI, SQL Server, MySQL, Zabbix, Grafana, e sou certificado ISTQB CTFL. 
-      Utilizo metodologias ágeis (Scrum/Kanban) e ferramentas como Jira, Confluence e Trello para gestão de qualidade.
+      Tenho experiência ampla em testes de software, incluindo testes funcionais, de API (REST/SOAP), testes mobile, testes de performance com JMeter e validações de banco de dados. 
+      Participo de times ágeis com metodologias como Scrum e Kanban. Sou certificado ISTQB CTFL e aplico BDD nos meus testes para garantir qualidade e organização.
     </p>
+  </section>
+
+  <section id="habilidades">
+    <h2>🛠️ Habilidades Técnicas</h2>
+    <ul>
+      <li>✔️ Testes Manuais: Funcional, Regressão, Exploratórios, Responsivo, E2E</li>
+      <li>✔️ Testes de API: REST e SOAP com Postman, Insomnia e SoapUI</li>
+      <li>✔️ Testes de Performance: JMeter</li>
+      <li>✔️ Testes Backend: SQL (SELECT, JOIN, DELETE), integração com banco</li>
+      <li>✔️ Ferramentas: Zabbix, Grafana, Jira, Confluence, Trello, Xray</li>
+      <li>✔️ Automação: Selenium com C# e Python (API)</li>
+      <li>✔️ Plataformas: VTEX, e-commerce, ambientes mobile (BrowserStack)</li>
+    </ul>
   </section>
 
   <section id="experiencia">
     <h2>💼 Experiência Profissional</h2>
-    <ul>
-      <li><strong>Novibet Gaming (2024 - atual)</strong>: Testes Web e Mobile, automação com C# e Selenium, integração com Dev Team, Xray e alinhamento internacional.</li>
-      <li><strong>Quality Digital (2024)</strong>: Planejamento de testes, execução de testes funcionais, regressão, API com Postman/Insomnia, mobile com BrowserStack.</li>
-      <li><strong>MobiLeng Mobility (2023 - 2024)</strong>: Modelagem de testes, automação, relatórios e sugestões de melhorias.</li>
-      <li><strong>Right Benefit (2022 - 2024)</strong>: Testes manuais e automação de APIs, performance com JMeter, monitoramento com Zabbix e Grafana.</li>
-    </ul>
+
+    <h3>Novibet Gaming (dez/2024 – atual)</h3>
+    <p>Atuação em ambiente internacional com testes web, mobile e automação em C# para APIs e regressão. Alinhamento diário com time grego e testes gerenciados no Xray.</p>
+
+    <h3>Quality Digital (fev/2024 – dez/2024)</h3>
+    <p>Criação de planos de teste em Jira, testes funcionais, mobile e integração. Testes de performance com JMeter, análise de logs e monitoramento de servidores.</p>
+
+    <h3>MobiLeng Mobility (jun/2023 – fev/2024)</h3>
+    <p>Execução de testes automatizados e criação de relatórios detalhados, com sugestões de melhorias.</p>
+
+    <h3>Right Benefit (mar/2022 – fev/2024)</h3>
+    <p>Testes manuais e automatizados em APIs e banco de dados. Testes de carga com JMeter e monitoramento com Zabbix e Grafana.</p>
   </section>
 
-  <section id="projetos">
-    <h2>🧪 Projetos</h2>
-    <div class="card">
-      <h3>Automação de Testes de API com C#</h3>
-      <p>Projeto voltado à validação de endpoints RESTful usando testes integrados com xUnit e autenticação por token.</p>
-      <a href="https://github.com/seurepo">Ver no GitHub</a>
-    </div>
-    <div class="card">
-      <h3>Testes de Performance com JMeter</h3>
-      <p>Simulação de múltiplos usuários em ambiente de banco digital, análise de estresse e resposta do sistema.</p>
-    </div>
+  <section id="certificacoes">
+    <h2>📜 Certificações</h2>
+    <ul>
+      <li>CTFL - Certified Tester Foundation Level (ISTQB)</li>
+      <li>Business Intelligence, SQL Server, MySQL, Oracle, T-SQL e PL/SQL</li>
+    </ul>
   </section>
 
   <section id="contato">
     <h2>📬 Contato</h2>
     <p>Email: <a href="mailto:marcos_s.z@outlook.com">marcos_s.z@outlook.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/marcos-melo-8009151A2" target="_blank">linkedin.com/in/marcos-melo</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/marcos-melo-8009151A2" target="_blank">linkedin.com/in/marcos-melo</a></p>
     <p>Telefone: +55 (11) 94831-6243</p>
   </section>
 
   <footer>
-    <p>© 2025 Marcos Melo</p>
+    <p>© 2025 Marcos Melo - Portfólio QA</p>
   </footer>
 </body>
 </html>
