--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <title>Marcos Melo - QA Engineer</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Importa biblioteca de ícones (Font Awesome CDN) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <header>
     <h1>Marcos Melo</h1>
     <p>Analista de Qualidade | Testes Manuais e de Performance | APIs | VTEX | E-commerce</p>
+    <div class="header-buttons">
+      <a href="mailto:marcos_s.z@outlook.com" class="icon-btn" title="E-mail">
+        <i class="fa-solid fa-envelope"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/marcos-melo-8009151a2/" target="_blank" class="icon-btn" title="LinkedIn">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="tel:+5511948316243" class="icon-btn" title="Telefone">
+        <i class="fa-solid fa-phone"></i>
+      </a>
+      <a href="MarcosMelo-CV.pdf" class="cv-btn" download>
+        <i class="fa-solid fa-file-arrow-down"></i> Baixar CV
+      </a>
+    </div>
     <nav>
       <a href="#sobre">Sobre</a>
       <a href="#habilidades">Habilidades</a>
