Adição botao do linkedin

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
     <p>Email: <a href="mailto:marcos_s.z@outlook.com">marcos_s.z@outlook.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/marcos-melo-8009151A2" target="_blank">linkedin.com/in/marcos-melo</a></p>
     <p>Telefone: +55 (11) 94831-6243</p>
+
+     <a
+    class="libutton"
+    href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=marcos-melo-8009151a2"
+    target="_blank"
+    rel="noopener"
+  >
+    Me siga no LinkedInS
+  </a>
   </section>
 
   <footer>
