--- a/index.html
+++ b/index.html
@@ -1,94 +1,151 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Marcos Melo - QA Engineer</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Marcos Melo – QA Engineer</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Importa biblioteca de ícones (Font Awesome CDN) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <header>
     <h1>Marcos Melo</h1>
-    <p>Analista de Qualidade | Testes Manuais e de Performance | APIs | VTEX | E-commerce</p>
-    <div class="header-buttons">
-      <a href="mailto:marcos_s.z@outlook.com" class="icon-btn" title="E-mail">
-        <i class="fa-solid fa-envelope"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/marcos-melo-8009151a2/" target="_blank" class="icon-btn" title="LinkedIn">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="tel:+5511948316243" class="icon-btn" title="Telefone">
-        <i class="fa-solid fa-phone"></i>
-      </a>
-      <a href="Marcos-Melo-english-CV.pdf" class="cv-btn" download>
-        <i class="fa-solid fa-file-arrow-down"></i> Baixar CV
-      </a>
-    </div>
+    <p>Test Analyst & QA Engineer | Manual, API & Performance Testing | VTEX & E-commerce</p>
     <nav>
-      <a href="#sobre">Sobre</a>
-      <a href="#habilidades">Habilidades</a>
-      <a href="#experiencia">Experiência</a>
-      <a href="#certificacoes">Certificações</a>
-      <a href="#contato">Contato</a>
+      <a href="#about">About</a>
+      <a href="#languages">Languages</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#education">Education</a>
+      <a href="#competencies">Core Competencies</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section id="sobre">
-    <h2>👨‍💻 Sobre Mim</h2>
+  <section id="about">
+    <h2>👋 About Me</h2>
     <p>
-      Tenho experiência ampla em testes de software, incluindo testes funcionais, de API (REST/SOAP), testes mobile, testes de performance com JMeter e validações de banco de dados. 
-      Participo de times ágeis com metodologias como Scrum e Kanban. Sou certificado ISTQB CTFL e aplico BDD nos meus testes para garantir qualidade e organização.
+      I have extensive experience across multiple testing disciplines: API, functional, environment,
+      web, back-end and mobile testing, plus performance testing with JMeter. I’ve done log
+      analysis, deployment monitoring and performance monitoring using Zabbix and Grafana.
+    </p>
+    <p>
+      I’m proficient with MySQL and SQL Server, and comfortable using tools like SoapUI,
+      Postman and Insomnia. To manage projects I rely on Jira, Trello and Confluence, following
+      agile frameworks (Scrum & Kanban).
+    </p>
+    <p>
+      I hold an ISTQB Certified Tester Foundation Level (CTFL) certification and apply BDD
+      in my test plans to ensure a structured, efficient approach to software quality.
     </p>
   </section>
 
-  <section id="habilidades">
-    <h2>🛠️ Habilidades Técnicas</h2>
+  <section id="languages">
+    <h2>🌐 Languages</h2>
     <ul>
-      <li>✔️ Testes Manuais: Funcional, Regressão, Exploratórios, Responsivo, E2E</li>
-      <li>✔️ Testes de API: REST e SOAP com Postman, Insomnia e SoapUI</li>
-      <li>✔️ Testes de Performance: JMeter</li>
-      <li>✔️ Testes Backend: SQL (SELECT, JOIN, DELETE), integração com banco</li>
-      <li>✔️ Ferramentas: Zabbix, Grafana, Jira, Confluence, Trello, Xray</li>
-      <li>✔️ Automação: Selenium com C# e Python (API)</li>
-      <li>✔️ Plataformas: VTEX, e-commerce, ambientes mobile (BrowserStack)</li>
+      <li>English (Full Professional)</li>
+      <li>Portuguese (Native)</li>
+      <li>Spanish (Basic)</li>
     </ul>
   </section>
 
-  <section id="experiencia">
-    <h2>💼 Experiência Profissional</h2>
-
-    <h3>Novibet Gaming (dez/2024 – atual)</h3>
-    <p>Atuação em ambiente internacional com testes web, mobile e automação em C# para APIs e regressão. Alinhamento diário com time grego e testes gerenciados no Xray.</p>
-
-    <h3>Quality Digital (fev/2024 – dez/2024)</h3>
-    <p>Criação de planos de teste em Jira, testes funcionais, mobile e integração. Testes de performance com JMeter, análise de logs e monitoramento de servidores.</p>
-
-    <h3>MobiLeng Mobility (jun/2023 – fev/2024)</h3>
-    <p>Execução de testes automatizados e criação de relatórios detalhados, com sugestões de melhorias.</p>
-
-    <h3>Right Benefit (mar/2022 – fev/2024)</h3>
-    <p>Testes manuais e automatizados em APIs e banco de dados. Testes de carga com JMeter e monitoramento com Zabbix e Grafana.</p>
-  </section>
-
-  <section id="certificacoes">
-    <h2>📜 Certificações</h2>
+  <section id="skills">
+    <h2>🛠️ Technical Skills</h2>
     <ul>
-      <li>CTFL - Certified Tester Foundation Level (ISTQB)</li>
-      <li>Business Intelligence, SQL Server, MySQL, Oracle, T-SQL e PL/SQL</li>
+      <li>Manual Testing: Functional, Regression, Exploratory, Smoke, Usability, E2E, Responsive</li>
+      <li>API Testing: REST & SOAP with Postman, Insomnia, SoapUI</li>
+      <li>Performance Testing: Load & Stress Tests with JMeter</li>
+      <li>Back-End Testing: SQL (SELECT, JOIN, DELETE), integration tests & DB validation</li>
+      <li>Monitoring Tools: Zabbix, Grafana, log analysis</li>
+      <li>CI/CD: Basic pipeline monitoring & validation</li>
+      <li>Automation: Selenium with Python & C# (API automations)</li>
+      <li>Test Management: Jira, Confluence, Trello, Xray</li>
+      <li>Platforms: VTEX, e-commerce environments, BrowserStack (mobile)</li>
+      <li>Gaming: Casino & Sportsbook testing</li>
     </ul>
   </section>
 
-  <section id="contato">
-    <h2>📬 Contato</h2>
+  <section id="experience">
+    <h2>💼 Professional Experience</h2>
+
+    <h3>Novibet Gaming</h3>
+    <span>QA Engineer (Dec 2024 – Present)</span>
+    <ul>
+      <li>Test management in Xray on Jira, expanding coverage & traceability.</li>
+      <li>Automated C# test suites for regression & API validation.</li>
+      <li>Web & mobile testing with Selenium; daily stand-ups with Greek dev team.</li>
+      <li>Cross-team collaboration to prevent defects; integration of code coverage.</li>
+    </ul>
+
+    <h3>Quality Digital</h3>
+    <span>QA Engineer (Feb 2024 – Dec 2024)</span>
+    <ul>
+      <li>Designed & executed test plans in Jira (functional, regression, UAT).</li>
+      <li>Performance testing with JMeter; real-time server monitoring & log analysis.</li>
+      <li>Mobile compatibility testing via BrowserStack; integration testing to reduce bugs.</li>
+    </ul>
+
+    <h3>MobiLeng Mobility</h3>
+    <span>QA Engineer (Jun 2023 – Feb 2024)</span>
+    <ul>
+      <li>Modeled test schedules and detailed result reporting.</li>
+      <li>Automated test scripts and provided actionable improvement suggestions.</li>
+    </ul>
+
+    <h3>Right Benefit</h3>
+    <span>QA Engineer (Mar 2022 – Feb 2024)</span>
+    <ul>
+      <li>Manual & automated API/database testing; clear bug reporting.</li>
+      <li>Load/stress testing with JMeter on digital banking platform.</li>
+      <li>Server monitoring for SPTrans on Linux; performance tracking with Zabbix & Grafana.</li>
+    </ul>
+  </section>
+
+  <section id="education">
+    <h2>🎓 Education</h2>
+    <h3>City University of São Paulo</h3>
+    <p>Associate Degree in Systems Analysis & Development (Jan 2022 – Apr 2024)</p>
+  </section>
+
+  <section id="competencies">
+    <h2>🧩 Core Competencies</h2>
+    <ul>
+      <li>Manual Testing</li>
+      <li>REST API Testing</li>
+      <li>Regression Testing</li>
+      <li>End-to-End Testing</li>
+      <li>Back-End Integration</li>
+      <li>Performance Testing</li>
+      <li>Server Monitoring</li>
+    </ul>
+  </section>
+
+  <section id="certifications">
+    <h2>📜 Certifications</h2>
+    <ul>
+      <li>ISTQB Certified Tester Foundation Level (CTFL)</li>
+      <li>Business Intelligence: SQL Server, MySQL, Oracle, T-SQL & PL/SQL</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>📬 Contact</h2>
     <p>Email: <a href="mailto:marcos_s.z@outlook.com">marcos_s.z@outlook.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/marcos-melo-8009151A2" target="_blank">linkedin.com/in/marcos-melo</a></p>
-    <p>Telefone: +55 (11) 94831-6243</p>
-
+    <p>Phone: +55 11 94831-6243</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/marcos-melo-8009151a2/" target="_blank" rel="noopener">
+      linkedin.com/in/marcos-melo-8009151a2
+    </a></p>
+    <p><a href="MarcosMelo-CV.pdf" class="cv-btn" download>
+      <i class="fa-solid fa-file-arrow-down"></i> Download CV (PDF)
+    </a></p>
   </section>
 
   <footer>
-    <p>© 2025 Marcos Melo - Portfólio QA</p>
+    <p>© 2025 Marcos Melo – QA Portfolio</p>
   </footer>
 </body>
 </html>
