adição de foto no header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfolio of Marcos Melo – QA Engineer specializing in Manual, API, and Performance Testing.">
   <title>Marcos Melo – QA Engineer</title>
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome for icons -->
@@ -12,8 +13,15 @@
 </head>
 <body>
   <header>
-    <h1>Marcos Melo</h1>
-    <p>Test Analyst & QA Engineer | Manual, API & Performance Testing | VTEX & E-commerce</p>
+    <div class="profile-header">
+      <img src="VIV6750-Editar.jpg" alt="Photo of Marcos Melo" class="profile-photo-small">
+      <div class="profile-info">
+        <h1>Marcos Melo</h1>
+        <p class="tagline">
+          Test Analyst & QA Engineer | Manual, API & Performance Testing | VTEX & E-commerce
+        </p>
+      </div>
+    </div>
     <nav>
       <a href="#about">About</a>
       <a href="#languages">Languages</a>
@@ -25,124 +33,121 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+  <main>
+    <section id="about">
+      <h2>👋 About Me</h2>
+      <p>
+        I have extensive experience across multiple testing disciplines: API, functional, environment,
+        web, back-end and mobile testing, plus performance testing with JMeter. I’ve done log
+        analysis, deployment monitoring and performance monitoring using Zabbix and Grafana.
+      </p>
+      <p>
+        I’m proficient with MySQL and SQL Server, and comfortable using tools like SoapUI,
+        Postman and Insomnia. To manage projects I rely on Jira, Trello and Confluence, following
+        agile frameworks (Scrum & Kanban).
+      </p>
+      <p>
+        I hold an ISTQB Certified Tester Foundation Level (CTFL) certification and apply BDD
+        in my test plans to ensure a structured, efficient approach to software quality.
+      </p>
+    </section>
 
-  <section id="about">
-    <h2>👋 About Me</h2>
-    <p>
-      I have extensive experience across multiple testing disciplines: API, functional, environment,
-      web, back-end and mobile testing, plus performance testing with JMeter. I’ve done log
-      analysis, deployment monitoring and performance monitoring using Zabbix and Grafana.
-    </p>
-    <p>
-      I’m proficient with MySQL and SQL Server, and comfortable using tools like SoapUI,
-      Postman and Insomnia. To manage projects I rely on Jira, Trello and Confluence, following
-      agile frameworks (Scrum & Kanban).
-    </p>
-    <p>
-      I hold an ISTQB Certified Tester Foundation Level (CTFL) certification and apply BDD
-      in my test plans to ensure a structured, efficient approach to software quality.
-    </p>
-  </section>
+    <section id="languages">
+      <h2>🌐 Languages</h2>
+      <ul>
+        <li>English (Full Professional)</li>
+        <li>Portuguese (Native)</li>
+        <li>Spanish (Basic)</li>
+      </ul>
+    </section>
 
-  <section id="languages">
-    <h2>🌐 Languages</h2>
-    <ul>
-      <li>English (Full Professional)</li>
-      <li>Portuguese (Native)</li>
-      <li>Spanish (Basic)</li>
-    </ul>
-  </section>
+    <section id="skills">
+      <h2>🛠️ Technical Skills</h2>
+      <ul>
+        <li>Manual Testing: Functional, Regression, Exploratory, Smoke, Usability, E2E, Responsive</li>
+        <li>API Testing: REST & SOAP with Postman, Insomnia, SoapUI</li>
+        <li>Performance Testing: Load & Stress Tests with JMeter</li>
+        <li>Back-End Testing: SQL (SELECT, JOIN, DELETE), integration tests & DB validation</li>
+        <li>Monitoring Tools: Zabbix, Grafana, log analysis</li>
+        <li>CI/CD: Basic pipeline monitoring & validation</li>
+        <li>Automation: Selenium with Python & C# (API automations)</li>
+        <li>Test Management: Jira, Confluence, Trello, Xray</li>
+        <li>Platforms: VTEX, e-commerce environments, BrowserStack (mobile)</li>
+        <li>Gaming: Casino & Sportsbook testing</li>
+      </ul>
+    </section>
 
-  <section id="skills">
-    <h2>🛠️ Technical Skills</h2>
-    <ul>
-      <li>Manual Testing: Functional, Regression, Exploratory, Smoke, Usability, E2E, Responsive</li>
-      <li>API Testing: REST & SOAP with Postman, Insomnia, SoapUI</li>
-      <li>Performance Testing: Load & Stress Tests with JMeter</li>
-      <li>Back-End Testing: SQL (SELECT, JOIN, DELETE), integration tests & DB validation</li>
-      <li>Monitoring Tools: Zabbix, Grafana, log analysis</li>
-      <li>CI/CD: Basic pipeline monitoring & validation</li>
-      <li>Automation: Selenium with Python & C# (API automations)</li>
-      <li>Test Management: Jira, Confluence, Trello, Xray</li>
-      <li>Platforms: VTEX, e-commerce environments, BrowserStack (mobile)</li>
-      <li>Gaming: Casino & Sportsbook testing</li>
-    </ul>
-  </section>
+    <section id="experience">
+      <h2>💼 Professional Experience</h2>
 
-  <section id="experience">
-    <h2>💼 Professional Experience</h2>
+      <h3>Novibet Gaming</h3>
+      <span>QA Engineer (Dec 2024 – Present)</span>
+      <ul>
+        <li>Test management in Xray on Jira, expanding coverage & traceability.</li>
+        <li>Automated C# test suites for regression & API validation.</li>
+        <li>Web & mobile testing with Selenium; daily stand-ups with Greek dev team.</li>
+        <li>Cross-team collaboration to prevent defects; integration of code coverage.</li>
+      </ul>
 
-    <h3>Novibet Gaming</h3>
-    <span>QA Engineer (Dec 2024 – Present)</span>
-    <ul>
-      <li>Test management in Xray on Jira, expanding coverage & traceability.</li>
-      <li>Automated C# test suites for regression & API validation.</li>
-      <li>Web & mobile testing with Selenium; daily stand-ups with Greek dev team.</li>
-      <li>Cross-team collaboration to prevent defects; integration of code coverage.</li>
-    </ul>
+      <h3>Quality Digital</h3>
+      <span>QA Engineer (Feb 2024 – Dec 2024)</span>
+      <ul>
+        <li>Designed & executed test plans in Jira (functional, regression, UAT).</li>
+        <li>Performance testing with JMeter; real-time server monitoring & log analysis.</li>
+        <li>Mobile compatibility testing via BrowserStack; integration testing to reduce bugs.</li>
+      </ul>
 
-    <h3>Quality Digital</h3>
-    <span>QA Engineer (Feb 2024 – Dec 2024)</span>
-    <ul>
-      <li>Designed & executed test plans in Jira (functional, regression, UAT).</li>
-      <li>Performance testing with JMeter; real-time server monitoring & log analysis.</li>
-      <li>Mobile compatibility testing via BrowserStack; integration testing to reduce bugs.</li>
-    </ul>
+      <h3>MobiLeng Mobility</h3>
+      <span>QA Engineer (Jun 2023 – Feb 2024)</span>
+      <ul>
+        <li>Modeled test schedules and detailed result reporting.</li>
+        <li>Automated test scripts and provided actionable improvement suggestions.</li>
+      </ul>
 
-    <h3>MobiLeng Mobility</h3>
-    <span>QA Engineer (Jun 2023 – Feb 2024)</span>
-    <ul>
-      <li>Modeled test schedules and detailed result reporting.</li>
-      <li>Automated test scripts and provided actionable improvement suggestions.</li>
-    </ul>
+      <h3>Right Benefit</h3>
+      <span>QA Engineer (Mar 2022 – Feb 2024)</span>
+      <ul>
+        <li>Manual & automated API/database testing; clear bug reporting.</li>
+        <li>Load/stress testing with JMeter on digital banking platform.</li>
+        <li>Server monitoring for SPTrans on Linux; performance tracking with Zabbix & Grafana.</li>
+      </ul>
+    </section>
 
-    <h3>Right Benefit</h3>
-    <span>QA Engineer (Mar 2022 – Feb 2024)</span>
-    <ul>
-      <li>Manual & automated API/database testing; clear bug reporting.</li>
-      <li>Load/stress testing with JMeter on digital banking platform.</li>
-      <li>Server monitoring for SPTrans on Linux; performance tracking with Zabbix & Grafana.</li>
-    </ul>
-  </section>
+    <section id="education">
+      <h2>🎓 Education</h2>
+      <h3>City University of São Paulo</h3>
+      <p>Associate Degree in Systems Analysis & Development (Jan 2022 – Apr 2024)</p>
+    </section>
 
-  <section id="education">
-    <h2>🎓 Education</h2>
-    <h3>City University of São Paulo</h3>
-    <p>Associate Degree in Systems Analysis & Development (Jan 2022 – Apr 2024)</p>
-  </section>
+    <section id="competencies">
+      <h2>🧩 Core Competencies</h2>
+      <ul>
+        <li>Manual Testing</li>
+        <li>REST API Testing</li>
+        <li>Regression Testing</li>
+        <li>End-to-End Testing</li>
+        <li>Back-End Integration</li>
+        <li>Performance Testing</li>
+        <li>Server Monitoring</li>
+      </ul>
+    </section>
 
-  <section id="competencies">
-    <h2>🧩 Core Competencies</h2>
-    <ul>
-      <li>Manual Testing</li>
-      <li>REST API Testing</li>
-      <li>Regression Testing</li>
-      <li>End-to-End Testing</li>
-      <li>Back-End Integration</li>
-      <li>Performance Testing</li>
-      <li>Server Monitoring</li>
-    </ul>
-  </section>
+    <section id="certifications">
+      <h2>📜 Certifications</h2>
+      <ul>
+        <li>ISTQB Certified Tester Foundation Level (CTFL)</li>
+        <li>Business Intelligence: SQL Server, MySQL, Oracle, T-SQL & PL/SQL</li>
+      </ul>
+    </section>
 
-  <section id="certifications">
-    <h2>📜 Certifications</h2>
-    <ul>
-      <li>ISTQB Certified Tester Foundation Level (CTFL)</li>
-      <li>Business Intelligence: SQL Server, MySQL, Oracle, T-SQL & PL/SQL</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>📬 Contact</h2>
-    <p>Email: <a href="mailto:marcos_s.z@outlook.com">marcos_s.z@outlook.com</a></p>
-    <p>Phone: +55 11 94831-6243</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/marcos-melo-8009151a2/" target="_blank" rel="noopener">
-      linkedin.com/in/marcos-melo-8009151a2
-    </a></p>
-    <p><a href="MarcosMelo-CV.pdf" class="cv-btn" download>
-      <i class="fa-solid fa-file-arrow-down"></i> Download CV (PDF)
-    </a></p>
-  </section>
+    <section id="contact">
+      <h2>📬 Contact</h2>
+      <p>Email: <a href="mailto:marcos_s.z@outlook.com">marcos_s.z@outlook.com</a></p>
+      <p>Phone: +55 11 94831-6243</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/marcos-melo-8009151a2/" target="_blank" rel="noopener">linkedin.com/in/marcos-melo-8009151a2</a></p>
+      <p><a href="MarcosMelo-CV.pdf" class="cv-btn" download><i class="fa-solid fa-file-arrow-down"></i> Download CV (PDF)</a></p>
+    </section>
+  </main>
 
   <footer>
     <p>© 2025 Marcos Melo – QA Portfolio</p>
