--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="profile-header">
-      <img src="_VIV6750-Editar.jpg" alt="Photo of Marcos Melo" class="profile-photo-small">
+      <img src="marcos_foto.jpg" alt="Photo of Marcos Melo" class="profile-photo-small">
       <div class="profile-info">
         <h1>Marcos Melo</h1>
         <p class="tagline">
