--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           Test Analyst & QA Engineer | Manual, API & Performance Testing | VTEX & E-commerce
         </p>
       </div>
+      <a href="Marcos-Melo-english-CV.pdf" class="cv-btn" download>
+      <i class="fa-solid fa-file-arrow-down"></i> Download CV
+    </a>
     </div>
     <nav>
       <a href="#about">About</a>
@@ -145,7 +148,7 @@
       <p>Email: <a href="mailto:marcos_s.z@outlook.com">marcos_s.z@outlook.com</a></p>
       <p>Phone: +55 11 94831-6243</p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/marcos-melo-8009151a2/" target="_blank" rel="noopener">linkedin.com/in/marcos-melo-8009151a2</a></p>
-      <p><a href="MarcosMelo-CV.pdf" class="cv-btn" download><i class="fa-solid fa-file-arrow-down"></i> Download CV (PDF)</a></p>
+      <p><a href="Marcos-Melo-english-CV.pdf" class="cv-btn" download><i class="fa-solid fa-file-arrow-down"></i> Download CV (PDF)</a></p>
     </section>
   </main>
 
