remove pdf from footer and add photo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <div class="profile-header">
       <img
-        src="VIV6750-Editar.jpg"
+        src="marcos_foto.jpg"
         alt="Photo of Marcos Melo"
         class="profile-photo-small"
       />
@@ -37,9 +37,6 @@
         </a>
         <a href="tel:+5511948316243" class="icon-btn" title="Phone">
           <i class="fa-solid fa-phone"></i>
-        </a>
-        <a href="MarcosMelo-CV.pdf" class="cv-btn" download>
-          <i class="fa-solid fa-file-arrow-down"></i> Download CV
         </a>
       </div>
     </div>
